<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/configuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:text="@string/echelle" 
         style="@style/button"/>

    <Button
        android:id="@+id/voyage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/configuration"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="23dp"
        android:text="@string/trip"
         style="@style/button" />

    <Button
        android:id="@+id/arret_imp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/configuration"
        android:layout_marginTop="20dp"
        android:text="@string/arr_imp"
         style="@style/button" />

    <Button
        android:id="@+id/vitesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/arret_imp"
        android:layout_marginTop="18dp"
        android:text="@string/vitesse"
         style="@style/button" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/voyage"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:src="@drawable/mascotte" />

</RelativeLayout>